# Upp-Lock

./: .gitignore  CMakeLists.txt  Kconfig  README.d  README.md  prj.conf  rpi_pico2_rp2350a_m33.overlay
base_node/: CMakeLists.txt  prj.conf
base_node/boards/: rpi_pico.overlay  rpi_pico2_rp2350a_m33.overlay
base_node/src/: base_display.c  base_display.h  main.c
boards/: rpi_pico2_rp2350a_m33.overlay
common/: protocol.h
controller_node/: CMakeLists.txt  prj.conf  rpi_pico.overlay  rpi_pico2_rp2350a_m33.overlay  rpi_pico_usb.conf
controller_node/src/: controller_uart.c  controller_uart.h  main.c
drivers/sensor/buzzer/: CMakeLists.txt  Kconfig  buzzer.c  buzzer.h
drivers/sensor/ltr303/: CMakeLists.txt  Kconfig  ltr303.c  ltr303_reg.h
drivers/sensor/ltr303/archive/: ltr303.c
drivers/sensor/mpu6050/: CMakeLists.txt  Kconfig  mpu6050.c  mpu6050_reg.h
drivers/sensor/rgb_led/: CMakeLists.txt  Kconfig  rgb_led.c
drivers/sensor/ss49e/: CMakeLists.txt  Kconfig  ss49e.c
drivers/sensor/ss49e/zephyr/: module.yml
dts/bindings/sensor/: custom,gpio-buzzer.yaml  custom,rgb-led.yaml  invensense,mpu6050-custom.yaml  ltr,ltr303.yaml  zephyr,ss49e-sensor.yaml
sensor_node/: CMakeLists.txt  prj.conf  rpi_pico2_rp2350a_m33.overlay  rpi_pico_usb.conf
sensor_node/boards/: rpi_pico2.overlay
sensor_node/src/: main.c
sensor_node/src/comm/: command_handler.c  command_handler.h  command_thread.c  uart_comm.c  uart_comm.h
sensor_node/src/drivers/ltr303/: ltr303.h
sensor_node/src/drivers/mpu6050/: mpu6050.h  mpu6050_reg.h
sensor_node/src/drivers/ss49e/: ss49e.c
src/: main.c
src/drivers/mpu6050/: mpu6050.c
